<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="timerViewModel"
            type="com.procrastinationcollaboration.miraunicornledlamp.ui.timer.TimerViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.TimerFragment">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="@{timerViewModel.timerEnabled ? View.GONE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/title_timer_turnoff"
                android:textIsSelectable="true"
                android:textSize="15sp" />

            <NumberPicker
                android:id="@+id/hour_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:configChanges="keyboard|keyboardHidden" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_hour_picker"
                android:textIsSelectable="true"
                android:textSize="15sp"
                tools:ignore="HardcodedText" />

            <NumberPicker
                android:id="@+id/minute_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"
                android:configChanges="keyboard|keyboardHidden" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/title_minute_picker"
                android:textIsSelectable="true"
                android:textSize="15sp"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <TextView
            android:id="@+id/timer_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text='@{"Таймер установлен. Время отключения: "+ timerViewModel.turnoffTime}'
            android:textSize="20sp"
            android:visibility="@{timerViewModel.timerEnabled ? View.VISIBLE : View.GONE }"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout"
            tools:text="@tools:sample/date/mmddyy" />

        <Button
            android:id="@+id/setup_timer_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="@{!timerViewModel.timerEnabled}"
            android:text="@string/title_setup_timer_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer_info_title" />

        <Button
            android:id="@+id/cancel_timer_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="@{timerViewModel.timerEnabled}"
            android:text="@string/title_cancel_timer_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setup_timer_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>